# ACE-Step-DAW

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  agent-prompt.txt  package-lock.json  package.json  playwright.config.ts  run-agent.sh  tsconfig.json  vite.config.ts  vitest.config.ts
.claude/: launch.json
.claude/agents/: do-todo.md  product-manager.md  reviewer.md  tester.md
.claude/commands/: spec-cycle.md
.claude/rules/: development-process.md
.github/workflows/: e2e.yml  ops-on-merge.yml  test.yml
.llm/: TASK_QUEUE.md  todo.md
.llm/research/: automation-parameter-ux.md  collaboration-project-ux.md  daw-synths-samplers.md  drum-machine-sequencer-ux.md  effects-plugin-ui.md  mixer-channel-strip-ui.md  onboarding-workflow-ux.md  piano-roll-midi-ux.md  recording-input-monitoring-ux.md  sample-browser-library.md  synth-ui-design.md  timeline-arrangement-ux.md
companion/: Cargo.toml  README.md  build.rs
companion/src/: audio_thread.rs  error.rs  gui_manager.rs  main.rs  plugin_host.rs  plugin_scanner.rs  preset_manager.rs  protocol.rs  ws_server.rs
crates/: Cargo.toml
crates/ace-dsp-core/src/: autopan.rs  biquad.rs  chorus.rs  dcblock.rs  delay.rs  distortion.rs  dynamics.rs  eq.rs  gain.rs  lib.rs  limiter.rs  phaser.rs  reverb.rs  ringmod.rs  stereo.rs  tremolo.rs
crates/ace-dsp-wasm/src/: lib.rs
crates/ace-plugin-host/: Cargo.toml
crates/ace-plugin-host/examples/: roundtrip.rs
crates/ace-plugin-host/src/: arrangement.rs  audio.rs  error.rs  host.rs  host_impl.rs  lib.rs  loader.rs  midi.rs  params.rs  scanner.rs  stream.rs  types.rs
crates/ace-plugin-host/tests/: scanner_smoke.rs
crates/ace-timestretch/: Cargo.toml
crates/ace-timestretch-wasm/: Cargo.toml
crates/ace-timestretch-wasm/src/: lib.rs
crates/ace-timestretch/src/: lib.rs  resample.rs  transient.rs  vocoder.rs
crates/ace-waveform/: Cargo.toml
crates/ace-waveform-wasm/: Cargo.toml
crates/ace-waveform-wasm/src/: lib.rs
crates/ace-waveform/src/: lib.rs
dashboard/: index.html  server.ts  vite.config.ts
dashboard/src/: App.tsx  store.ts  types.ts
docs/: METRICS.md  dev-process.md  feature-gap-analysis.md  integration-plan.md
docs/design/: INTERACTION_DESIGN_GUIDE.md  UX_IMPROVEMENT_CHECKLIST.md
docs/plans/: feat-ai-assistant-help-panel.md  feat-bounce-render-in-place.md  feat-command-palette.md  feat-consolidate-clips.md  feat-first-run-onboarding-genr.md  feat-midi-export.md  feat-piano-roll-power-tools.md  feat-quick-sampler.md  feat-recording.md  feat-scoped-undo-history.md  feat-ui-layout-persist.md  fix-audio-clip-extension-repitch-stretch.md  fix-export-wav-midi-seq.md  fix-loop-browser.md  fix-loop-drag-to-timeline.md  fix-midi-sequencer-playback.md  fix-playwright-e2e-startup.md  fix-stems-empty-lane-gridlines.md  fix-track-reorder-empty-slots.md  integrate-midi-strudel.md  roadmap-themed-sprints-2026-03.md  sprint-01-synth-foundation.md  sprint-02-sampling-drum-render.md  sprint-03-mixer-device-routing.md  sprint-04-midi-rhythm-automation.md  sprint-05-arrangement-recording.md  sprint-06-onboarding-library-accessibility.md  sprint-07-collaboration-cloud.md  sprint-08-advanced-sound-design.md
docs/qa/: story-matrix.md
docs/research-notes/: ace-step-api-integration.md  bounce-in-place-competitive-research-20260319.md  command-palette-competitive-research-20260319.md  consolidate-clips-competitive-research-20260319.md  drag-testing-best-practices.md  midi-export-competitive-research-20260319.md  midi-strudel-integration.md  mixer-ux-gaps.md  quick-sampler-competitive-research-20260319.md  scoped-undo-history-competitive-research-20260319.md  session-view-record-to-arrangement.md  timeline-zoom-best-practices.md
playwright-report/: index.html
public/: ace_waveform_wasm_bg.wasm  engine-worklet-processor.js  reverb-worklet-processor.js  spectral-worklet-processor.js  wasm-dsp-processor.js
public/models/: chord-vocabulary.json
scripts/: metrics.sh
scripts/agents/: feedback-runner.sh  launch-dev.sh  project-manager.sh  qa-tester.sh  spec-to-issues.sh  sprint-runner.sh
scripts/qa/: generate-runlist.mjs  validate-story-assets.mjs
src/: index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: audio.rs  mod.rs  plugin.rs
src-tauri/src/engine/: audio_io.rs  clip.rs  command.rs  config.rs  count_in.rs  effect_chain.rs  graph.rs  loop_region.rs  meter.rs  meter_bank.rs  metronome.rs  mixer.rs  mod.rs  position_emitter.rs  punch_region.rs  routing.rs  slot.rs  tempo_map.rs  time_sig_map.rs  transport.rs
src-tauri/tests/: local_audio_smoke.rs
src/api/: dawApi.ts
src/constants/: defaults.ts  enhancePresets.ts  generationPresets.ts  languages.ts  shortcutDefaults.ts  shortcutPresets.ts  strudelTemplateLibrary.ts  trackHeight.ts  tracks.ts
src/data/: fmPresets.ts  instrumentPresets.ts  onboardingCatalog.ts  timbrePresets.ts
src/engine/: AdditiveEngine.ts  AudioEngine.ts  AutomationEngine.ts  DrumEngine.ts  EffectsEngine.ts  GranularEngine.ts  InstrumentFactory.ts  KarplusStrongEngine.ts  LoopLibrary.ts  ModulationEngine.ts  PluginEngine.ts  PreviewEngine.ts  RecordingEngine.ts  SamplerEngine.ts  SubtractiveEngine.ts  SynthEngine.ts  TrackNode.ts  VideoSyncEngine.ts  WavetableEngine.ts  exportMix.ts  offlineRender.ts  presetPreview.ts  samplerZoneResolver.ts  sidechainFollower.ts  strudelEditorPlayback.ts  strudelEngine.ts  strudelStructuredLog.ts  velocityLayerUtils.ts
src/hooks/: useAccessibilitySync.ts  useAudioEngine.ts  useAudioImport.ts  useAutoSave.ts  useEffectsSync.ts  useEnhancePanelState.ts  useFocusTrap.ts  useKeyboardShortcuts.ts  useMidiController.ts  useMpeController.ts  useOnboardingProgress.ts  useOnboardingTracking.ts  usePresetPreview.ts  useRecording.ts  useReducedMotion.ts  useSessionDragDrop.ts  useSessionMidiController.ts  useSfzImport.ts  (+7 more)
test-results/: .last-run.json
tests/: TEST_PLAN.md  USER_TEST_GUIDE.md  setup.ts  system-test-round1.md
(+1133 files in other folders)
