[package]
name = "ace-step-companion"
version = "0.1.0"
edition = "2021"
description = "Native companion app for ACE-Step DAW — VST3 plugin hosting and GUI management"

[dependencies]
# Future dependencies for real implementation:
# objc2 = "0.5"          # For AppKit/Cocoa bindings
# objc2-app-kit = "0.2"  # For NSWindow, NSView
# tokio = { version = "1", features = ["full"] }
# serde = { version = "1", features = ["derive"] }
# serde_json = "1"
