[package]
name = "ace-step-companion"
version = "0.1.0"
edition = "2021"
description = "ACE-Step DAW companion app — hosts VST3 plugins and communicates with the browser DAW over WebSocket"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
walkdir = "2"
crossbeam = "0.8"
plist = "1"

[dev-dependencies]
tempfile = "3"
