[workspace]
resolver = "2"
members = [
    "ace-dsp-core",
    "ace-dsp-wasm",
    "ace-plugin-host",
    "ace-timestretch",
    "ace-timestretch-wasm",
    "ace-waveform",
    "ace-waveform-wasm",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ace-step/ACE-Step-DAW"

[profile.release]
opt-level = "z"       # Optimize for size (WASM binary minimization)
lto = true            # Link-time optimization
codegen-units = 1     # Single codegen unit for best optimization
strip = true          # Strip debug symbols
panic = "abort"       # Smaller binary — no unwinding
