[package]
name = "ace-step-daw"
version = "0.1.0"
description = "ACE-Step DAW — AI-native music production workstation"
authors = ["ACE Studio <junmin@acestudio.ai>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/ace-step/ACE-Step-DAW"

[lib]
name = "ace_step_daw_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ace-dsp-core = { path = "../crates/ace-dsp-core" }
cpal = "0.15"
crossbeam-channel = "0.5"
ringbuf = "0.4"
thiserror = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
