[package]
name = "ace-waveform-wasm"
description = "WASM bindings for ace-waveform mipmap — callable from Web Workers"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ace-waveform = { path = "../ace-waveform" }
wasm-bindgen = "0.2"
js-sys = "0.3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dev-dependencies]
wasm-bindgen-test = "0.3"
