[package]
name = "ace-waveform"
description = "Multi-level mipmap waveform pyramid — min/max/RMS per block per channel"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["lib"]

[dependencies]
libm = "0.2"

[features]
default = ["std"]
std = []

[dev-dependencies]
approx = "0.5"
